# CE-QUAL-W2-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  environment.yml  pyproject.toml
apps/clearview/: __init__.py
apps/clearview/gui/: __init__.py  controllers.py  main.py  main_mvc.py  models.py  test_advanced_plotting.py  test_data.csv  test_file_open.py  test_full_app.py  test_iterrows_fix.py  test_mvc_simple.py  test_open_button.py  test_plot_issue.py  test_sci_notation.py  test_tsr_format.py  test_tsr_plotting.py  test_validation_filtering.py  views.py
apps/clearview/web/: WEB_IMPROVEMENT_PLAN.md  __init__.py  flask_debug.py  flask_viewer.py  flask_viewer_broken.py  flask_viewer_broken2.py  flask_viewer_restored.py  flask_viewer_test.py  main.py  minimal_flask.py  minimal_test.py  quick_test.py  run_flask.py  simple_test.py  simple_viewer.py  streamlit_viewer.py  test_simple.py  water_quality_test.csv
src/: ClearView_holoviews_and_pyqt5.py  ClearView_holoviews_and_pyqt6.py  ClearView_pyqt5.py  ClearView_pyqt6.py  ce-qual-w2-viewer - to demo copilot.py  ce-qual-w2-viewer-holoviews.py  ce-qual-w2-viewer-holoviews_refactored.py  ce-qual-w2-viewer.py  data.db  met_demo.ipynb  w2.py
src/archived/: ce-qual-w2-viewer-holoviews_and_pyqt6.py  ce-qual-w2-viewer_pyqt6.py
src/cequalw2/: Untitled-1.ipynb  __init__.py  w2_datetime.py  w2_io.py  w2_reports.py  w2_visualization.py
src/cequalw2/analysis/: __init__.py
src/cequalw2/apps/: __init__.py  clearview.py
src/cequalw2/io/: __init__.py
src/cequalw2/utils/: __init__.py
src/cequalw2/visualization/: __init__.py
src/prototypes/CE-QUAL-W2-plot-app/: plot_cequalw2_data.py  plot_cequalw2_data_old.py  test.py
src/prototypes/report/: statistics_report.py  water_quality_report.docx
src/tests/data/BerlinMilton2006/: snp1.opt  tsr_2_seg75.csv  two_str2_seg75_wdo.csv
test/: Untitled-1.ipynb  example.docx  plot_all_w2_files.ipynb  water_quality_report.docx  water_quality_report_old.docx  wq_statistics_report_prototype.ipynb  wq_statistics_report_prototype_bad.ipynb
test/data/: tsr_1_seg2.csv
test/data/BerlinMilton2006/: cwo_37_wdo.csv  cwo_75_wdo.csv
test/tests/: test_visualization.ipynb
test/tests/data/BerlinMilton2006/: cwo_str1_seg75_wdo.csv  cwo_str2_seg75_wdo.csv  snp2.opt  tsr_1_seg37.csv  two_str1_seg75_wdo.csv  wl.opt
test/tests002/ClearView/cequalw2/: w2_visualization.py
tests/: conftest.py
tests/test_analysis/: test_reports.py
tests/test_io/: __init__.py  test_readers.py
tests/test_visualization/: test_plots.py
