[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cequalw2"
version = "1.0.0"
description = "Python toolkit for CE-QUAL-W2 hydrodynamic and water quality model data analysis and visualization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Todd E. Steissberg", email = "todd.e.steissberg@usace.army.mil"},
]
maintainers = [
    {name = "Ecohydrology Team", email = "todd.e.steissberg@usace.army.mil"},
]
keywords = ["hydrology", "water-quality", "modeling", "visualization", "ce-qual-w2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "holoviews>=1.15.0",
    "panel>=1.0.0",
    "bokeh>=3.0.0",
    "h5py>=3.7.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0",
    "pyqt6>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "jupyterlab>=4.0.0",
]
all = ["cequalw2[dev,docs,notebooks]"]

[project.urls]
Homepage = "https://github.com/EcohydrologyTeam/CE-QUAL-W2-python"
Documentation = "https://github.com/EcohydrologyTeam/CE-QUAL-W2-python/docs"
Repository = "https://github.com/EcohydrologyTeam/CE-QUAL-W2-python"
Issues = "https://github.com/EcohydrologyTeam/CE-QUAL-W2-python/issues"

[project.scripts]
clearview = "cequalw2.apps.clearview:main"
clearview-web = "cequalw2.apps.clearview.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cequalw2.apps.clearview" = ["assets/**/*"]

# Black code formatting
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cequalw2"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# MyPy type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "holoviews.*",
    "panel.*",
    "bokeh.*",
    "h5py.*",
    "PyQt5.*",
]
ignore_missing_imports = true